# k2-base-camp

./: .pyproject  Pipfile  setup.cfg
docs/source/: conf.py
docs/source/api/: controllers.rst  models.rst  services.rst  utils.rst
docs/source/pages/: development.rst  examples.rst
k2basecamp/: __main__.py  resources.py
k2basecamp/assets/: eve-net-c_can_2.4.1.xdf
k2basecamp/controllers/: bootloader_controller.py  connection_controller.py  drive_controller.py
k2basecamp/models/: base_model.py  bootloader_model.py  connection_model.py  drive_model.py
k2basecamp/services/: bootloader_thread.py  motion_controller_service.py  motion_controller_thread.py  poller_thread.py
k2basecamp/utils/: enums.py  functions.py  types.py
k2basecamp/views/: BootloaderPage.qml  ControlsPage.qml  SelectionPage.qml  main.qml
k2basecamp/views/components/: Button.qml  Selection.qml  SpacerH.qml  SpacerW.qml  StateButton.qml
k2basecamp/views/js/: bootloader.js  controls.js  plot.js
src/: __main__.py
src/controllers/: bootloader_controller.py  drive_controller.py
src/models/: drive_model.py
src/services/: motion_controller_service.py
src/views/: SelectionPage.qml
tests/: conftest.py
tests/gui/: test_gui_emergency_button.py
tests/unit/: test_unit_drive_controller.py
