[metadata]
name = k2-base-camp
version = 1.0
author = Ingenia Motion Control
author_email = support@ingeniamc.com
description = Simple open source app to plug & play with your servo drive
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ingeniamc/k2-base-camp
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE

[options]
packages = find:
package_dir =
    =k2basecamp

[options.packages.find]
where = k2basecamp
include = *